"assert(BytecodeVerificationRemote) failed: Should not be here" when running class redefinition test with -XX:-BytecodeVerificationRemote

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 27
    • Affects Version/s: 27
    • Component/s: hotspot
    • None
    • b11

      "assert(BytecodeVerificationRemote) failed: Should not be here" when running class redefinition test with -XX:-BytecodeVerificationRemote

      Might be related to JDK-8344922. If this is expected behavior, maybe the assert should be changed or removed.

      ===

      make run-test TEST=test/hotspot/jtreg/vmTestbase/nsk/jvmti/RedefineClasses/redefclass028/TestDescription.java TEST_VM_OPTS="-XX:-BytecodeVerificationRemote" CONF=-fastdebug

      ===

      src/hotspot/share/classfile/verifier.cpp:625), pid=1858381, tid=1858416
      # assert(BytecodeVerificationRemote) failed: Should not be here
      #
      # JRE version: Java(TM) SE Runtime Environment (27.0) (fastdebug build 27-


      Current thread (0x00007f4f640ced00): JavaThread "JVMTI agent thread" daemon [_thread_in_vm, id=1858416, stack(0x00007f4f921f9000,0x00007f4f922f9000) (1024K)]

      Stack: [0x00007f4f921f9000,0x00007f4f922f9000], sp=0x00007f4f922f55a0, free space=1009k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1c8cfc4] ClassVerifier::verify_class(JavaThread*)+0x3a4 (verifier.cpp:625)
      V [libjvm.so+0x1c8db2d] Verifier::verify(InstanceKlass*, bool, JavaThread*)+0x9bd (verifier.cpp:223)
      V [libjvm.so+0x14b1809] VM_RedefineClasses::load_new_class_versions() [clone .part.0]+0x169 (jvmtiRedefineClasses.cpp:1459)
      V [libjvm.so+0x14b371b] VM_RedefineClasses::doit_prologue()+0x2db (jvmtiRedefineClasses.cpp:1334)
      V [libjvm.so+0x1cdc338] VMThread::execute(VM_Operation*)+0x78 (vmThread.cpp:541)
      V [libjvm.so+0x145fa2a] JvmtiEnv::RedefineClasses(int, jvmtiClassDefinition const*)+0x18a (jvmtiEnv.cpp:505)
      V [libjvm.so+0x13eca06] jvmti_RedefineClasses+0x126 (jvmtiEnter.cpp:4028)
      C [libredefclass028.so+0x6daa] agentProc+0x2ea (jvmti.h:2362)
      C [libredefclass028.so+0x5aac] agentThreadWrapper+0xac (agent_tools.cpp:155)
      V [libjvm.so+0x149977a] JvmtiAgentThread::call_start_function()+0x6a (jvmtiImpl.cpp:89)
      V [libjvm.so+0x112d29b] JavaThread::thread_main_inner()+0x13b (javaThread.cpp:776)
      V [libjvm.so+0x1bbc846] Thread::call_run()+0xb6 (thread.cpp:243)
      V [libjvm.so+0x1810c38] thread_native_entry(Thread*)+0x118 (os_linux.cpp:929)

            Assignee:
            Leonid Mesnik
            Reporter:
            Daniel Skantz
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: